partman-auto (152) UNRELEASED; urgency=medium

  * Bump /boot sizes in most recipes from between 128 and 256M to
    between 256 and 512M.  As initramfs keep growing, and kernel ABI
    bumps keep happening, running out of space on /boot is unpleasant.
    Closes: #893886.

 -- Julien Cristau <jcristau@debian.org>  Mon, 09 Mar 2020 20:22:35 +0100

partman-auto (151) unstable; urgency=medium

  * Team upload

  [ Updated translations ]
  * Dutch (nl.po) by Frans Spiesschaert

 -- Holger Wansing <hwansing@mailbox.org>  Sat, 07 Mar 2020 21:15:03 +0100

partman-auto (150) unstable; urgency=medium

  * Team upload

  [ Updated translations ]
  * Croatian (hr.po) by gogogogi
  * Portuguese (pt.po) by Miguel Figueiredo

 -- Holger Wansing <hwansing@mailbox.org>  Wed, 13 Nov 2019 22:37:57 +0100

partman-auto (149) unstable; urgency=medium

  * Team upload

  [ Cyril Brulebois ]
  * Remove Christian Perrier from Uploaders, with many thanks for all
    his contributions over the years! (Closes: #927535)

  [ John Paul Adrian Glaubitz ]
  * Use recipes-amd64-efi on ia64
  * Use canonical /boot partition priorities and sizes on sparc/sparc64

  [ Holger Wansing ]
  * Workaround for installer hanging at harddisk step with Arabic (see #929877)

 -- Holger Wansing <hwansing@mailbox.org>  Thu, 20 Jun 2019 10:19:28 +0200

partman-auto (148) unstable; urgency=medium

  * Team upload

  [ Updated translations ]
  * Hebrew (he.po) by Yaron Shahrabani
  * Vietnamese (vi.po) by Trần Ngọc Quân

 -- Holger Wansing <hwansing@mailbox.org>  Mon, 04 Mar 2019 05:09:06 +0100

partman-auto (147) unstable; urgency=medium

  * Team upload

  * Remove trailing whitespaces from changelog file, to fix lintian tag.

  [ Updated translations ]
  * Finnish (fi.po) by Juhani Numminen
  * Traditional Chinese (zh_TW.po) by Louies

 -- Holger Wansing <hwansing@mailbox.org>  Sat, 09 Feb 2019 22:29:42 +0100

partman-auto (146) unstable; urgency=medium

  * Team upload

  [ Updated translations ]