@@ -46,6 +46,17 @@ Type: string
 Description: for internal use; can be preseeded
  Method to use for partitioning
 
+Template: partman-auto/cap-ram
+Type: string
+Default: 1024
+Description: for internal use; can be preseeded
+ Cap RAM size to specified size in MB, when calculating the swap
+ partition size. Defaults to 1024, meaning 1GB, and since swap is
+ maximum 200% of RAM in the default recipes, it results in swap
+ partitions to be capped at 2GB. To revert to previous behaviour of
+ uncapped swap size with respect to available ram, preseed this key to
+ any string, e.g. partman-auto/cap-ram=false
+
 Template: partman-auto/automatically_partition
 Type: select
 Choices-C: ${CHOICES}
